add wildcard  dns

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,4 +23,31 @@ http {
             root   html;
         }
     }
+    server {
+        listen       80;
+        server_name  127.0.0.1.easylify.com;
+        charset utf-8;
+        root html;
+        location / {
+         index index.html;
+        }
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
+    }
+    server {
+        listen       80;
+        server_name  app.127.0.0.1.easylify.com;
+        charset utf-8;
+        root html;
+        location / {
+         
+         index app.html;
+        }
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
+    }
 }
